base/solution001/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution001-service
  namespace: tenant-example
  labels:
    app: solution001
spec:
 selector:
   app: solution001
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
